fixes bug 258217 "Windows DDE code should extract application name from nsXREAppData" r=bsmedberg